# video_processing

./: README.md
cv_tools/: CMakeLists.txt  package.xml
cv_tools/src/: image_labeling.cpp
external_device/: CMakeLists.txt  package.xml
external_device/src/: external_device.cpp
ui_tools/: CMakeLists.txt  package.xml
ui_tools/src/: ui_tools.cpp
video_processing/: CMakeLists.txt  package.xml
video_processing/launch/: video_pipeline.launch
video_streamer/: CMakeLists.txt  package.xml
video_streamer/src/: file_streamer.cpp
