cmake_minimum_required(VERSION 3.0.2)
project(video_processing)

### Find catkin and any catkin packages
#find_package(catkin REQUIRED COMPONENTS roscpp rospy std_msgs genmsg)
#
#find_package(OpenCV 3.0.0 REQUIRED)
#
### Declare ROS messages and services
##add_message_files(FILES Num.msg)
##add_service_files(FILES AddTwoInts.srv)
#
### Generate added messages and services
#generate_messages(DEPENDENCIES std_msgs)
#
### Declare a catkin package
#catkin_package()
#
### Build talker and listener
#include_directories(include ${catkin_INCLUDE_DIRS})
#
#add_executable(file_streamer src/video_labeling.cpp)
#target_link_libraries(file_streamer ${catkin_LIBRARIES})
##add_dependencies(talker beginner_tutorials_generate_messages_cpp)
#
##add_executable(listener src/listener.cpp)
##target_link_libraries(listener ${catkin_LIBRARIES})
##add_dependencies(listener beginner_tutorials_generate_messages_cpp)
